# yoyo-installer

./: .gitignore  README.md  abroot-adapter  demo.json  meson.build  recipe.json
data/: installer.desktop  installer.session  meson.build  org.yoyoos.Installer.appdata.xml.in  org.yoyoos.Installer.desktop.in  org.yoyoos.Installer.gschema.xml  org.yoyoos.Installer.policy
debian/: changelog  (+4 more)
yoyo_installer/: main.py  meson.build  yoyo-installer-processor.in  yoyo-installer.gresource.xml  yoyo-installer.in
yoyo_installer/core/: meson.build
yoyo_installer/core/locales/: __init__.py  africa.py  america.py  antarctica.py  arctic.py  asia.py  atlantic.py  australia.py  brazil.py  canada.py  chile.py  europe.py  indian.py  meson.build  mexico.py  pacific.py
yoyo_installer/defaults/: disk.py  keyboard.py  language.py  meson.build  theme.py  timezone.py  users.py  welcome.py
yoyo_installer/gtk/: confirm.ui  default-disk.ui  default-keyboard.ui  default-language.ui  default-theme.ui  default-timezone.ui  default-users.ui  default-welcome.ui  dialog-disk-confirm.ui  dialog-disk.ui  dialog-output.ui  dialog.ui  done.ui  layout-preferences.ui  layout-yes-no.ui  progress.ui  tour.ui  widget-choice-expander.ui  widget-choice.ui  widget-disk.ui  widget-partition.ui  window.ui
yoyo_installer/layouts/: meson.build  preferences.py  yes_no.py
yoyo_installer/utils/: builder.py  meson.build  processor.py  recipe.py
yoyo_installer/views/: confirm.py  done.py  meson.build  progress.py  tour.py
yoyo_installer/windows/: dialog.py  dialog_output.py  main_window.py  meson.build
(+144 files in other folders)
